--- a/dotnet-lessons-client/src/styles.scss
+++ b/dotnet-lessons-client/src/styles.scss
@@ -1,4 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.fluid-container {
+  padding: 20px 0;
+  margin: 0 20px;
+  @media only screen and (min-width: 1080px) {
+    max-width: 1000px;
+    padding: 40px 0;
+    margin: 0 auto;
+  }
+}
