--- a/dotnet-lessons-client/src/app/pages/lessons-page/async-lesson-page/async-lesson-page.component.html
+++ b/dotnet-lessons-client/src/app/pages/lessons-page/async-lesson-page/async-lesson-page.component.html
@@ -1,23 +1,1 @@
-<mat-accordion multi="true">
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        This is the expansion title
-      </mat-panel-title>
-      <mat-panel-description>
-        This is a summary of the content
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
-  </mat-expansion-panel>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Self aware panel
-      </mat-panel-title>
-      <mat-panel-description>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>I'm visible because I am open</p>
-  </mat-expansion-panel>
-</mat-accordion>
+<app-request [requestConfigs]="requestConfigs"></app-request>
