--- a/dotnet-lessons-client/src/app/components/request/request.component.html
+++ b/dotnet-lessons-client/src/app/components/request/request.component.html
@@ -14,45 +14,68 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <ng-template matExpansionPanelContent>
-        <mat-grid-list cols="4"
-                       rowHeight="50px">
-          <mat-grid-tile colspan="4">
-            <button mat-raised-button
-                    color="accent"
-                    style="flex: 1;"
-                    (click)="executeAction(requestConfig, i)"
-                    [disabled]="requestStates[i].isRequestActive"> Execute
-              <mat-icon *ngIf="requestStates[i].isRequestActive">
-                <mat-spinner diameter="20">
-                </mat-spinner>
-              </mat-icon>
-            </button>
-          </mat-grid-tile>
-          <mat-grid-tile *ngIf="requestStates[i].status">
-            <span>Status: {{ requestStates[i].status }}</span>
-          </mat-grid-tile>
-          <mat-grid-tile *ngIf="requestStates[i].statusText">
-            <span>Status text: {{ requestStates[i].statusText }}</span>
-          </mat-grid-tile>
-          <mat-grid-tile *ngIf="requestStates[i].requestTime"
-                         colspan="2">
-            <span>Request Time: {{ requestStates[i].requestTime }}</span>
-          </mat-grid-tile>
-          <mat-grid-tile *ngIf="requestConfig.shouldParseResponseBody && requestStates[i].body"
-                         colspan="4"
-                         rowspan="4">
-            <div style="flex-direction: column; flex: 1; max-height: 100%; height: 100%; display: flex;">
-              <div>Body: </div>
-              <div style="overflow: auto;">
-                <code style="white-space: break-spaces;">{{requestStates[i].body}}</code>
+        <form #requestForm="ngForm"
+              (submit)="executeAction(requestConfig, i)">
+          <mat-grid-list cols="4"
+                         rowHeight="60px">
+            <mat-grid-tile colspan="4"
+                           *ngIf="requestConfig.isStressTestAllowed">
+              <div style="flex: 1;">
+
+                <mat-form-field style="min-width: 250px;">
+                  <mat-label>Number of Simultaneous Requests</mat-label>
+                  <input matInput
+                         type="number"
+                         name="numberSimultaneousRequests"
+                         min="0"
+                         step="1"
+                         pattern="^[0-9]*$"
+                         [(ngModel)]="requestStates[i].numberSimultaneousRequests"
+                         [defaultValue]="requestConfig.defaultSimultaneousRequestsNumber">
+                </mat-form-field>
               </div>
-            </div>
-          </mat-grid-tile>
-        </mat-grid-list>
+            </mat-grid-tile>
+            <mat-grid-tile colspan="4">
+              <button mat-raised-button
+                      color="accent"
+                      style="flex: 1;"
+                      type="submit"
+                      [disabled]="requestStates[i].isRequestActive || requestForm.form.invalid"> Execute
+                <mat-icon *ngIf="requestStates[i].isRequestActive">
+                  <mat-spinner diameter="20">
+                  </mat-spinner>
+                </mat-icon>
+              </button>
+            </mat-grid-tile>
+            <mat-grid-tile *ngIf="requestStates[i].status || requestStates[i].statusText"
+                           colspan="2">
+              <span>Status: {{ requestStates[i].status || '--' }}</span>
+            </mat-grid-tile>
+            <mat-grid-tile *ngIf="requestStates[i].statusText"
+                           colspan="2">
+              <span>Status text: {{ requestStates[i].statusText }}</span>
+            </mat-grid-tile>
+            <mat-grid-tile *ngIf="requestStates[i].requestTime"
+                           colspan="2">
+              <span>Request Time: {{ requestStates[i].requestTime }}</span>
+            </mat-grid-tile>
+            <mat-grid-tile *ngIf="requestStates[i].successCounterResult"
+                           colspan="2">
+              <span>Success: {{ requestStates[i].successCounterResult }}</span>
+            </mat-grid-tile>
+            <mat-grid-tile *ngIf="requestConfig.shouldParseResponseBody && requestStates[i].body"
+                           colspan="4"
+                           rowspan="4">
+              <div style="flex-direction: column; flex: 1; max-height: 100%; height: 100%; display: flex;">
+                <div>Body: </div>
+                <div style="overflow: auto;">
+                  <code style="white-space: break-spaces;">{{requestStates[i].body}}</code>
+                </div>
+              </div>
+            </mat-grid-tile>
+          </mat-grid-list>
+        </form>
       </ng-template>
     </mat-expansion-panel>
-
   </ng-template>
-
-
 </mat-accordion>
